fix: Fixing z-index and new icon for footer

--- a/src/core/SCSS/base/layout/l-burgermenu.scss
+++ b/src/core/SCSS/base/layout/l-burgermenu.scss
@@ -14,7 +14,14 @@
 
   @media screen and (max-width: 768px) {
     background-color: transparent;
+    background-size: cover;
+    background-position: center;
+    background-image: url('/images/castletower.webp');
+    background-repeat: no-repeat;
   }
+}
+.blurbackground {
+  z-index: 60;
 }
 
 .backgroundburger a {
